# DirectML_Sample

./: .gitignore  CMakeLists.txt  DirectMLProcessor.cpp  DirectMLProcessor.hpp  hello_dml.cpp
include/: DirectMLProcessor.hpp
src/: DirectMLProcessor.cpp  main.cpp
